crates/pixtuoid/tests/snapshots/layout_golden__desks_192x160.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 64,
        y: 62,
    },
    Point {
        x: 90,
        y: 62,
    },
    Point {
        x: 64,
        y: 81,
    },
    Point {
        x: 90,
        y: 81,
    },
    Point {
        x: 124,
        y: 62,
    },
    Point {
        x: 150,
        y: 62,
    },
    Point {
        x: 124,
        y: 81,
    },
    Point {
        x: 150,
        y: 81,
    },
]
