crates/pixtuoid/tests/snapshots/layout_golden__desks_96x72.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 37,
        y: 30,
    },
    Point {
        x: 63,
        y: 30,
    },
    Point {
        x: 37,
        y: 49,
    },
    Point {
        x: 63,
        y: 49,
    },
]
