crates/pixtuoid/tests/snapshots/layout_golden__desks_dense_seed6.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 78,
        y: 62,
    },
    Point {
        x: 104,
        y: 62,
    },
    Point {
        x: 78,
        y: 81,
    },
    Point {
        x: 104,
        y: 81,
    },
]
