crates/pixtuoid/tests/snapshots/layout_golden__desks_open_plan_seed2.snap
---
source: crates/pixtuoid/tests/layout_golden.rs
expression: l.home_desks
---
[
    Point {
        x: 67,
        y: 48,
    },
    Point {
        x: 93,
        y: 48,
    },
    Point {
        x: 67,
        y: 67,
    },
    Point {
        x: 93,
        y: 67,
    },
]
